--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     </head>
     <body>
         <header>
-            <a href="">WebStudio</a>
             <nav>
+                <a href="./index.html">WebStudio</a>
                 <ul>
-                    <li><a href="">Studio</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">Contacts</a></li>
+                    <li>Studio</li>
+                    <li>Portfolio</li>
+                    <li>Contacts</li>
                 </ul>
             </nav>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
+            <address>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
         </header>
         <main>
             <section>
@@ -26,6 +28,7 @@
                 <button type="button">Order Service</button>
             </section>
             <section>
+                <h2>Feature</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -62,7 +65,7 @@
                 <ul>
                     <li>
                         <img
-                            src="images/img1.jpg"
+                            src="./images/img1.jpg"
                             alt="development of sites"
                             width="360"
                             height="300"
@@ -70,7 +73,7 @@
                     </li>
                     <li>
                         <img
-                            src="images/img2.jpg"
+                            src="./images/img2.jpg"
                             alt="applications"
                             width="360"
                             height="300"
@@ -78,7 +81,7 @@
                     </li>
                     <li>
                         <img
-                            src="images/img3.jpg"
+                            src="./images/img3.jpg"
                             alt="site adaptation"
                             width="360"
                             height="300"
@@ -91,7 +94,7 @@
                 <ul>
                     <li>
                         <img
-                            src="images/img1-team.jpg"
+                            src="./images/img1-team.jpg"
                             alt="Product Designer"
                             width="264"
                             height="260"
@@ -101,7 +104,7 @@
                     </li>
                     <li>
                         <img
-                            src="images/img2-team.jpg"
+                            src="./images/img2-team.jpg"
                             alt="Frontend Developer"
                             width="264"
                             height="260"
@@ -111,7 +114,7 @@
                     </li>
                     <li>
                         <img
-                            src="images/img3-team.jpg"
+                            src="./images/img3-team.jpg"
                             alt="Marketing"
                             width="264"
                             height="260"
@@ -121,7 +124,7 @@
                     </li>
                     <li>
                         <img
-                            src="images/img4-team.jpg"
+                            src="./images/img4-team.jpg"
                             alt="UI Designer"
                             width="264"
                             height="260"
@@ -133,7 +136,7 @@
             </section>
         </main>
         <footer>
-            <a href="">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <p>
                 Increase the flow of customers and sales for your business with digital
                 marketing & growth solutions.
